rename search section and explore

--- a/calendar_week.html
+++ b/calendar_week.html
@@ -624,7 +624,7 @@
                                 <div>
                                   <div>
                                     <button type="button" class="btn-outline-small">
-                                      <span class="_14d5b3i"
+                                      <span class="search__submit-btn-text-center"
                                         ><span class="box-border">Actions</span
                                         ><span class="_9y3psr"
                                           ><svg
@@ -3180,7 +3180,7 @@
                     class="_dxx2an"
                   >
                     <section>
-                      <div class="_11ry7lz">
+                      <div class="color_black">
                         <h1
                           tabindex="-1"
                           class="heading"
