--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -356,7 +356,7 @@
                         data-testid="myx-container"
                       >
                         <div class="_2m9wl" style="max-width: 464px">
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="display__flex dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="HEADING_WIDE"
@@ -382,7 +382,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="display__flex dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="STEP_SUBTITLE"
@@ -408,7 +408,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="display__flex dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="FORM"
@@ -416,7 +416,7 @@
                                 style="padding-top: 16px; padding-bottom: 124px"
                               >
                                 <div class="c14z17by dir dir-ltr">
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="MINIMUM_AGE_SECTION"
@@ -499,7 +499,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="UNDER_TWO_ALLOWED_SECTION"
@@ -549,7 +549,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="ACCESSIBILITY_FEATURES_SECTION"
@@ -726,7 +726,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="ACTIVITY_LEVEL_SECTION"
@@ -807,7 +807,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="SKILL_LEVEL_SECTION"
@@ -887,7 +887,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="ADDITIONAL_REQUIREMENTS_SECTION"
@@ -946,7 +946,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="REQUIRE_VERIFIED_ID_SECTION"
@@ -1020,7 +1020,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                           </div>
                           <div class="_1p8e1qw">
                             <div class="_v3p47v">
-                              <div class="c1yo0219 dir dir-ltr">
+                              <div class="display__flex dir dir-ltr">
                                 <div
                                   data-plugin-in-point-id="FOOTER"
                                   data-section-id="FOOTER"
