--- a/edit/bring.html
+++ b/edit/bring.html
@@ -356,7 +356,7 @@
                         data-testid="myx-container"
                       >
                         <div class="_2m9wl" style="max-width: 464px">
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="display__flex dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="HEADING_WIDE"
@@ -383,7 +383,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="display__flex dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="FORM"
@@ -391,7 +391,7 @@
                                 style="padding-top: 16px; padding-bottom: 129px"
                               >
                                 <div class="c14z17by dir dir-ltr">
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="INFO_GUESTS_SHOULD_BRING_ANYTHING"
@@ -433,7 +433,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="PACKING_LIST"
@@ -850,7 +850,7 @@
                           </div>
                           <div class="_1p8e1qw">
                             <div class="_v3p47v">
-                              <div class="c1yo0219 dir dir-ltr">
+                              <div class="display__flex dir dir-ltr">
                                 <div
                                   data-plugin-in-point-id="FOOTER"
                                   data-section-id="FOOTER"
