--- a/experienceType.html
+++ b/experienceType.html
@@ -267,11 +267,11 @@
         --g-lm-u-p: normal;
         --mq-yk-l: 0.04em;
       }
-      .c1yo0219[class][class]::before {
+      .display__flex[class][class]::before {
         display: flex;
         content: '';
       }
-      .c1yo0219[class][class]::after {
+      .display__flex[class][class]::after {
         display: flex;
         content: '';
       }
