--- a/inbox.html
+++ b/inbox.html
@@ -3398,11 +3398,11 @@
         --g-lm-u-p: normal;
         --mq-yk-l: 0.04em;
       }
-      .c1yo0219[class][class]::before {
+      .display__flex[class][class]::before {
         display: flex;
         content: '';
       }
-      .c1yo0219[class][class]::after {
+      .display__flex[class][class]::after {
         display: flex;
         content: '';
       }
@@ -7232,19 +7232,19 @@
       .atm_1yfe54e_161hw1:disabled {
         color: var(--j-qkgmf);
       }
-      .c1yo0219[class][class]::before {
+      .display__flex[class][class]::before {
         display: flex;
         content: '';
       }
-      .c1yo0219[class][class]::after {
+      .display__flex[class][class]::after {
         display: flex;
         content: '';
       }
-      .c1yo0219[class][class]::before {
+      .display__flex[class][class]::before {
         display: flex;
         content: '';
       }
-      .c1yo0219[class][class]::after {
+      .display__flex[class][class]::after {
         display: flex;
         content: '';
       }
@@ -8807,7 +8807,7 @@
                                       </div>
                                       <div class="w-100">
                                         <label
-                                          class="_krjbj"
+                                          class="new_arrow-underscore"
                                           for="message_input"
                                         ></label>
                                         <div class="_dta8n3">
