--- a/login-security.html
+++ b/login-security.html
@@ -1079,7 +1079,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="c1yo0219 dir dir-ltr"></div>
+                  <div class="display__flex dir dir-ltr"></div>
                 </div>
                 <div class="t2pjd0h dir dir-ltr">
                   <div class="t6qlz27 dir dir-ltr" data-testid="Incoming"></div>
@@ -1113,7 +1113,7 @@
                 <div class="page-shell-max-lg-plus">
                   <div class="page-shell">
                     <div class="_siy8gh">
-                      <div class="c1yo0219 dir dir-ltr" style="">
+                      <div class="display__flex dir dir-ltr" style="">
                         <header class="header">
                           <div class="header__container">
                             <div class="header__brand-wrapper">
@@ -2242,7 +2242,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="c1yo0219 dir dir-ltr">
+                  <div class="display__flex dir dir-ltr">
                     <footer role="contentinfo" class="footer">
                       <div class="footer__container">
                         <div class="footer__links-wrapper">
