--- a/payment.html
+++ b/payment.html
@@ -49,7 +49,7 @@
                 <div class="page-shell-max-lg-plus">
                   <div class="page-shell">
                     <div class="_siy8gh">
-                      <div class="c1yo0219 dir dir-ltr">
+                      <div class="display__flex dir dir-ltr">
                         <div class="_88xxct">
                           <div class="_18nz6sk" role="banner">
                             <a
@@ -95,7 +95,7 @@
                             <div style="min-height: 100vh">
                               <div class="_88xxct">
                                 <div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div class="section-container">
                                         <div
@@ -152,11 +152,11 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="c1yo0219 dir dir-ltr">
+                                <div class="display__flex dir dir-ltr">
                                   <div class="flex-row-full-width">
                                     <div class="_bdo76v7">
                                       <div style="margin-bottom: 64px">
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -173,7 +173,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -258,7 +258,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -285,7 +285,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -330,7 +330,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -382,7 +382,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -429,7 +429,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -517,7 +517,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -802,7 +802,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -826,7 +826,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -884,7 +884,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -944,7 +944,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="c1yo0219 dir dir-ltr">
+                                        <div class="display__flex dir dir-ltr">
                                           <div
                                             style="
                                               --gp-section-max-width: 1120px;
@@ -995,7 +995,7 @@
                                                         ></span></span
                                                       ><span
                                                         class="c4wd1yj dir dir-ltr"
-                                                        ><span class="_14d5b3i"
+                                                        ><span class="search__submit-btn-text-center"
                                                           ><span class="box-border"
                                                             >Confirm and
                                                             pay</span
@@ -1023,7 +1023,7 @@
                                           class="_7efq7j"
                                           style="margin-bottom: 88px"
                                         >
-                                          <div class="c1yo0219 dir dir-ltr">
+                                          <div class="display__flex dir dir-ltr">
                                             <div
                                               style="
                                                 --gp-section-max-width: 1120px;
@@ -1192,7 +1192,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="c1yo0219 dir dir-ltr">
+                                          <div class="display__flex dir dir-ltr">
                                             <div
                                               style="
                                                 --gp-section-max-width: 1120px;
@@ -1233,7 +1233,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="c1yo0219 dir dir-ltr">
+                                          <div class="display__flex dir dir-ltr">
                                             <div
                                               style="
                                                 --gp-section-max-width: 1120px;
@@ -1273,7 +1273,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="c1yo0219 dir dir-ltr">
+                                          <div class="display__flex dir dir-ltr">
                                             <div
                                               style="
                                                 --gp-section-max-width: 1120px;
@@ -1372,7 +1372,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="c1yo0219 dir dir-ltr">
+                            <div class="display__flex dir dir-ltr">
                               <footer role="contentinfo" class="footer">
                                 <div class="footer__container">
                                   <div class="_157uib4">
