--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -164,7 +164,7 @@
                                 aria-atomic="true"
                                 aria-live="polite"
                                 role="status"
-                                class="_krjbj"
+                                class="new_arrow-underscore"
                               ></span>
                             </div>
                           </div>
@@ -492,7 +492,7 @@
                 <div class="_1g05mp0x">
                   <div class="_qoaox5">
                     <a href="/resolutions" class="btn-link"
-                      ><span class="_14d5b3i"
+                      ><span class="search__submit-btn-text-center"
                         ><span class="_18eo66x"
                           ><span
                             ><svg
