--- a/submission/cancel.html
+++ b/submission/cancel.html
@@ -1075,7 +1075,7 @@
                                     <div class="va-top-h">
                                       <div style="margin-left: 16px">
                                         <div style="margin-bottom: 8px">
-                                          <div class="_h6avcp2">
+                                          <div class="explore__carousel-img-overlay-text">
                                             Guests can cancel until 7 days
                                             before the Experience start time for
                                             a full refund, or within 24 hours of
@@ -1113,7 +1113,7 @@
                                     <div class="va-top-h">
                                       <div style="margin-left: 16px">
                                         <div style="margin-bottom: 8px">
-                                          <div class="_h6avcp2">
+                                          <div class="explore__carousel-img-overlay-text">
                                             Guests can cancel until 24 hours
                                             before the Experience start time for
                                             a full refund.
