--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -401,8 +401,8 @@
                                     <div>
                                       <div>
                                         <button type="button" class="btn-outline-small">
-                                          <span class="_14d5b3i"
-                                            ><span class="_1r769ej"
+                                          <span class="search__submit-btn-text-center"
+                                            ><span class="search__submit-btn-mx"
                                               ><svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
