--- a/calendar.html
+++ b/calendar.html
@@ -623,7 +623,7 @@
                                 <div>
                                   <div>
                                     <button type="button" class="btn-outline-small">
-                                      <span class="_14d5b3i"
+                                      <span class="search__submit-btn-text-center"
                                         ><span class="box-border">Actions</span
                                         ><span class="_9y3psr"
                                           ><svg
@@ -1726,7 +1726,7 @@
                     class="_dxx2an"
                   >
                     <section>
-                      <div class="_11ry7lz">
+                      <div class="color_black">
                         <h1
                           tabindex="-1"
                           class="heading"
