--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -626,7 +626,7 @@
                                 <div>
                                   <div>
                                     <button type="button" class="btn-outline-small">
-                                      <span class="_14d5b3i"
+                                      <span class="search__submit-btn-text-center"
                                         ><span class="box-border">Actions</span
                                         ><span class="_9y3psr"
                                           ><svg
@@ -4975,7 +4975,7 @@
                             guests.
                           </div>
                           <div class="_9hxttoo">
-                            <label class="_krjbj" for="instance_notes"
+                            <label class="new_arrow-underscore" for="instance_notes"
                               >Private note (optional)</label
                             ><textarea
                               id="instance_notes"
