--- a/edit/about.html
+++ b/edit/about.html
@@ -356,7 +356,7 @@
                         data-testid="myx-container"
                       >
                         <div class="_2m9wl" style="max-width: 464px">
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="display__flex dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="HEADING_WIDE"
@@ -383,7 +383,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="display__flex dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="FORM"
@@ -391,7 +391,7 @@
                                 style="padding-top: 16px; padding-bottom: 129px"
                               >
                                 <div class="c14z17by dir dir-ltr">
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="ABOUT_YOU_PROFILE_HEADING"
@@ -419,7 +419,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="ABOUT_YOU_PROFILE_HTML"
@@ -443,7 +443,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="ABOUT_YOU_PROFILE_EDIT_LINKS"
@@ -530,7 +530,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="ABOUT_HOST_INPUT"
@@ -595,7 +595,7 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                           </div>
                           <div class="_1p8e1qw">
                             <div class="_v3p47v">
-                              <div class="c1yo0219 dir dir-ltr">
+                              <div class="display__flex dir dir-ltr">
                                 <div
                                   data-plugin-in-point-id="FOOTER"
                                   data-section-id="FOOTER"
