--- a/edit/what.html
+++ b/edit/what.html
@@ -357,7 +357,7 @@
                         data-testid="myx-container"
                       >
                         <div class="_2m9wl" style="max-width: 464px">
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="display__flex dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="HEADING_WIDE"
@@ -383,7 +383,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="display__flex dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="FORM"
@@ -391,7 +391,7 @@
                                 style="padding-top: 16px; padding-bottom: 129px"
                               >
                                 <div class="c14z17by dir dir-ltr">
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="DESCRIPTION"
@@ -467,7 +467,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="DURATION"
@@ -652,7 +652,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="ONLINE_QUESTION"
@@ -749,7 +749,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         data-plugin-in-point-id="CONCEPT_REFINEMENT_0"
@@ -807,7 +807,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="c1yo0219 dir dir-ltr">
+                                  <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
                                         class="_npr0qi"
@@ -877,7 +877,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                           </div>
                           <div class="_1p8e1qw">
                             <div class="_v3p47v">
-                              <div class="c1yo0219 dir dir-ltr">
+                              <div class="display__flex dir dir-ltr">
                                 <div
                                   data-plugin-in-point-id="FOOTER"
                                   data-section-id="FOOTER"
