--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -199,7 +199,7 @@
                               aria-atomic="true"
                               aria-live="polite"
                               role="status"
-                              class="_krjbj"
+                              class="new_arrow-underscore"
                             ></span>
                           </div>
                         </div>
