--- a/resolutions.html
+++ b/resolutions.html
@@ -215,7 +215,7 @@
                     </section>
                     <div class="_dj03bw">
                       <button type="button" class="btn-link">
-                        <span class="_14d5b3i"
+                        <span class="search__submit-btn-text-center"
                           ><span class="_18eo66x"
                             ><span
                               ><svg
