--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -344,7 +344,7 @@
                         class="btn-link"
                         onclick="window.location.href='resolutions.html';"
                       >
-                        <span class="_14d5b3i"
+                        <span class="search__submit-btn-text-center"
                           ><span class="_18eo66x"
                             ><span
                               ><svg
