--- a/reviews.html
+++ b/reviews.html
@@ -802,7 +802,7 @@
                                         type="checkbox"
                                         id="appreciation_social_bonding"
                                         name="appreciation_social_bonding"
-                                        class="_krjbj"
+                                        class="new_arrow-underscore"
                                         value="Great for social bonding"
                                       />
                                       <div class="_1wopp8n1">
@@ -854,7 +854,7 @@
                                         type="checkbox"
                                         id="appreciation_storytelling"
                                         name="appreciation_storytelling"
-                                        class="_krjbj"
+                                        class="new_arrow-underscore"
                                         value="Super storytelling"
                                       />
                                       <div class="_1h2rnec">
@@ -906,7 +906,7 @@
                                         type="checkbox"
                                         id="appreciation_setting"
                                         name="appreciation_setting"
-                                        class="_krjbj"
+                                        class="new_arrow-underscore"
                                         value="Magical setting"
                                       />
                                       <div class="_1h2rnec">
@@ -958,7 +958,7 @@
                                         type="checkbox"
                                         id="appreciation_personalization"
                                         name="appreciation_personalization"
-                                        class="_krjbj"
+                                        class="new_arrow-underscore"
                                         value="Thoughtful personalization"
                                       />
                                       <div class="_1h2rnec">
@@ -1010,7 +1010,7 @@
                                         type="checkbox"
                                         id="appreciation_value"
                                         name="appreciation_value"
-                                        class="_krjbj"
+                                        class="new_arrow-underscore"
                                         value="Great value"
                                       />
                                       <div class="_1h2rnec">
@@ -1062,7 +1062,7 @@
                                         type="checkbox"
                                         id="appreciation_family_friendly"
                                         name="appreciation_family_friendly"
-                                        class="_krjbj"
+                                        class="new_arrow-underscore"
                                         value="Family-friendly activity"
                                       />
                                       <div class="_1h2rnec">
@@ -1363,7 +1363,7 @@
                               <div class="_17w32ve">
                                 <div>
                                   <button type="submit" class="btn-dark">
-                                    <span class="_14d5b3i"
+                                    <span class="search__submit-btn-text-center"
                                       ><span class="box-border">Next</span
                                       ><span class="_9y3psr"
                                         ><svg
