--- a/specific_trip.html
+++ b/specific_trip.html
@@ -49,7 +49,7 @@
                 <div style="--page-shell-max-content-width: 1600px">
                   <div class="page-shell">
                     <div class="_siy8gh">
-                      <div class="c1yo0219 dir dir-ltr" style="">
+                      <div class="display__flex dir dir-ltr" style="">
                         <header class="header">
                           <div class="header__container">
                             <div class="header__brand-wrapper">
@@ -678,7 +678,7 @@
                                                                   <span
                                                                     class="relative"
                                                                     ><span
-                                                                      class="_krjbj"
+                                                                      class="new_arrow-underscore"
                                                                       >_</span
                                                                     ><svg
                                                                       viewBox="0 0 32 32"
@@ -5717,7 +5717,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="c1yo0219 dir dir-ltr">
+                  <div class="display__flex dir dir-ltr">
                     <footer role="contentinfo" class="footer">
                       <div class="footer__container">
                         <div class="footer__links-wrapper">
