--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1141,7 +1141,7 @@
                                     <span class="_1kr2rok6"
                                       ><div class="_9hxttoo">
                                         <label
-                                          class="_krjbj"
+                                          class="new_arrow-underscore"
                                           for="price_per_guest"
                                           >Each guest pays</label
                                         >
@@ -1179,7 +1179,7 @@
                                     ></span>
                                   </div>
                                   <div class="_1r533mk">
-                                    <span class="_krjbj"
+                                    <span class="new_arrow-underscore"
                                       >Your estimated earnings</span
                                     >
                                     <div class="_tzvqgd">
