--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1074,8 +1074,8 @@
                                     <div class="_1x44nii">
                                       <div class="_11ythok">
                                         <button type="button" class="btn-outline">
-                                          <span class="_14d5b3i"
-                                            ><span class="_1r769ej"
+                                          <span class="search__submit-btn-text-center"
+                                            ><span class="search__submit-btn-mx"
                                               ><svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
